[tool.poetry]
name = "face"
version = "0.1.0"
description = ""
authors = ["Benjamin Wallace <bwallace@irobot.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
mediapipe = "^0.9.3.0"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
